--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.36
-pandas>=2.2
-feedparser>=6.0
-scikit-learn>=1.5
-joblib>=1.4
-numpy>=1.26
-transformers>=4.41
-torch>=2.2
+streamlit==1.36.0
+pandas==2.2.2
+feedparser==6.0.11
+scikit-learn==1.5.1
+joblib==1.4.2
+numpy==1.26.4
+torch==2.2.2
+transformers==4.41.2
